# csci-366-spring2025-private

./: .gitignore  CMakeLists.txt  README.md  SYLLABUS.md
.github/workflows/: grading.yml
assembly/homework/: homework.asm
bit-tak-toe/: CMakeLists.txt  README.md  btt.c  btt.h  btt_cli.c  btt_tests.c
c/: CMakeLists.txt  concurrency.c  functions.c  pointers.c  stack_and_heap.c  strings_structs.c
cpu/: scott_cpu.html
cpu/lmc/: index.html  routa_v1.5b_lmc.js
grading/: .gitignore  .testsetv  CMakeLists.txt  format_results_for_ci.py  grader.py  students.csv
grading/testsets/: CMakeLists.txt
grading/testsets/asm/: CMakeLists.txt  test_asm.cxx
grading/testsets/bit-tak-toe/: CMakeLists.txt  utest.h
grading/testsets/emulator/: CMakeLists.txt  test_emulator.cxx
grading/testsets/firth/: CMakeLists.txt  test_firth.cxx
grading/testsets/sea/: CMakeLists.txt
grading/testsets/zortran/: CMakeLists.txt  test_zortran.cxx
lmsm/: CMakeLists.txt  README.md
lmsm/lib/: CMakeLists.txt  DO_NOT_MODIFY.txt
lmsm/lib/msulib/: CMakeLists.txt
lmsm/lib/msulib/inc/msulib/: alloc.h  fs.h  hash.h  http.h  parsenodelist.h  parser.h  socket.h  str.h  strlist.h
lmsm/lib/msulib/inc/templates/: btree.h
lmsm/lib/msulib/script/: generate_list_impl.py  list.c.mustache  list.h.mustache
lmsm/lib/msulib/src/: alloc.c  fs.c  hash.c  http.c  parsenodelist.c  parser.c  socket.c  str.c  strlist.c
lmsm/lib/msulib/test/: CMakeLists.txt  test_btree.cxx  test_parser.cxx  test_string.cxx
lmsm/lmsm/: CMakeLists.txt
lmsm/lmsm/inc/: asm_insrlist.h
lmsm/lmsm/inc/lmsm/: asm.h  asm_insrlist.h  emulator.h  firth.h  opt.h  sea.h  zortran.h
lmsm/lmsm/src/: asm.c  asm_insrlist.c  emulator.c  firth.c  opt.c  sea.c  zortran.c
lmsm/lmsm/web/: CMakeLists.txt  main.c  main.h
lmsm/lmsm/web/assets/: index.html.mustache  sea.html
lmsm/lmsm/web/assets/css/: global.css  index.css
lmsm/lmsm/web/src/: endpoints.c  endpoints.h  lang.c  lang.h
lmsm/scripts/: generate_lists.py
lmsm/tests/: CMakeLists.txt  test_asm.cxx  test_sea.cxx  test_zortran.cxx  testbase.cxx  testbase.hxx
